
PIG-2910: Add function to read schema from outout of Schema.toString() (initialcontext via thejas)

OPTIMIZATIONS

PIG-3395: Large filter expression makes Pig hang (cheolsoo)

PIG-3123: Simplify Logical Plans By Removing Unneccessary Identity Projections (njw45 via cheolsoo)

PIG-3013: BinInterSedes improve chararray sort performance (rohini)

BUG FIXES

PIG-3374: CASE and IN fail when expression includes dereferencing operator (cheolsoo)

PIG-2606: union/ join operations are not accepting same alias as multiple inputs (hsubramaniyan via daijy)

PIG-3435: Custom Partitioner not working with MultiQueryOptimizer (knoguchi via daijy)

PIG-3385: DISTINCT no longer uses custom partitioner (knoguchi via daijy)

PIG-3379: Alias reuse in nested foreach causes PIG script to fail (xuefuz via daijy)

PIG-3432: typo in log message in SchemaTupleFrontend (epishkin via cheolsoo)

PIG-3410: LimitOptimizer is applied before PartitionFilterOptimizer (aniket486)

PIG-3405: Top UDF documentation indicates improper use (aniket486 via cheolsoo)

PIG-3425: Hive jdo api jar referenced in pig script throws error (deepesh via cheolsoo)

PIG-3422: AvroStorage failed to read paths separated by commas (yuanlid via rohini)

PIG-3420: Failed to retrieve map values from data loaded by AvroStorage (yuanlid via rohini)

PIG-3414: QueryParserDriver.parseSchema(String) silently returns a wrong result when a comma is missing in the schema definition (cheolsoo)

PIG-3412: jsonstorage breaks when tuple does not have as many columns as schema (aesilberstein via cheolsoo)

PIG-3243: Documentation error (sarutak via cheolsoo)

PIG-3210: Pig fails to start when it cannot write log to log files (mengsungwu via cheolsoo)

PIG-3392: Document STARTSWITH and ENDSWITH UDFs (sriramkrishnan via cheolsoo)

PIG-3393: STARTSWITH udf doesn't override outputSchema method (sriramkrishnan via cheolsoo)

PIG-3389: "Set job.name" does not work with dump command (cheolsoo)
