@@ -220,6 +220,8 @@ PIG-3013: BinInterSedes improve chararray sort performance (rohini)
 
 BUG FIXES
 
+PIG-3349: Document ToString(Datetime, String) UDF (cheolsoo)
+
 PIG-3374: CASE and IN fail when expression includes dereferencing operator (cheolsoo)
 
 PIG-2606: union/ join operations are not accepting same alias as multiple inputs (hsubramaniyan via daijy)
